# monntpy-lab

./: .gitignore  EvalCompression.ipynb  EvalEncodingSize.ipynb  EvalInternal.ipynb  EvalNeworkSimulation.ipynb  EvalPerformance.ipynb  EvalResults.ipynb  EvalResults.ipynb.ipynb  PyStLComprEval.ipynb  README.md  build-all.sh  ch6_dtnd_spool_table.tex  ch6_ingest_table.tex  ch6_monntpy_spool_table.tex  ch6_seq_table.tex  clab  moNNTpy-Eval.ipynb  pyproject.toml  run-all.sh
coreemu-lab/: Dockerfile  build.sh  clab  inspect-container.sh
coreemu-lab/eval/: eth_wifi.imn  experiment.conf
coreemu-lab/modified/: config.py  db.sqlite3
coreemu-lab/scripts/: config.py  entryPoint.sh  nntp_sender.py  plot-pidstat.py  start-monntpy-stub.sh
eval/: 3-tier-scen.imn  3-tier-scen.xml  experiment.conf  nntp_sender.py
eval/confs/: aliceconfig.toml  bobconfig.toml  claraconfig.toml
net-emu/: Dockerfile  build.sh  clab  inspect-container.sh  run_1k_series.sh  run_series.sh
net-emu/assets/: config.py
net-sim/: Dockerfile  README.md  build.sh  clab  run_series.sh
performance/: Dockerfile  README.md  build.sh  convert-json-to-cbor.py  ingest.cbor  ingest.json  ingest_zlib.cbor  monntpy-config.py  perf_eval.sh  run.sh  run_benchmark.sh  spool.py
profiling/: README.md  load_dtnd.sh  spool.py
scratch/: BandwidthUsageWithPyDTN7.ipynb  BandwidthUsage_old.ipynb  FindWSDroppedMsgs.ipynb  NNTPLab.ipynb  PerformanceStats.ipynb  Untitled.ipynb  db_sandbox.ipynb  dtn7-testing.ipynb  nntp_sandbox.ipynb  testasync.py
verscompat/: Dockerfile  build.sh  docker_entrypoint.sh  run.sh
(+50 files in other folders)
